--- a/views/landing.html
+++ b/views/landing.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <title>Video with Text Chat</title>
-    <meta name="description" content="Adding text chat to a basic audio-video chat with OpenTok APIs in Node.js" />
+    <meta
+      name="description"
+      content="Adding text chat to a basic audio-video chat with Vonage Video API in Node.js"
+    />
     <link
       id="favicon"
       rel="icon"
@@ -44,8 +47,8 @@
     <footer>
       <p>
         <small
-          >Built on <a href="https://glitch.com">Glitch</a> with TokBox's
-          <a href="https://tokbox.com/developer/">OpenTok platform</a>.</small
+          >Built on <a href="https://glitch.com">Glitch</a> with the
+          <a href="https://tokbox.com/developer/">Vonage Video API</a>.</small
         >
       </p>
     </footer>
