--- a/views/landing.html
+++ b/views/landing.html
@@ -26,20 +26,26 @@
 
     <main>
       <form class="registration" id="registration">
-        <label for="room-name">Room</label>
-        <input
-          id="room-name"
-          name="room-name"
-          placeholder="Enter room name"
-          required
-        />
-        <label for="user-name">User name</label>
-        <input
-          id="user-name"
-          name="user-name"
-          placeholder="Enter your name"
-          required
-        />
+        <label>
+          <span>Room</span>
+          <input
+            type="text"
+            name="room-name"
+            placeholder="Enter room name"
+            required
+          />
+        </label>
+
+        <label>
+          <span>User name</span>
+          <input
+            type="text"
+            name="user-name"
+            placeholder="Enter your name"
+            required
+          />
+        </label>
+
         <button>Enter</button>
       </form>
     </main>
